@@ -1,9 +1,19 @@
 * 1.3.12
 
     NEW FUNCTIONALITY
+	
+	- added the concept of connection and endpoint "type". A type is a collection of attributes such as paint style,
+	hover paint style, overlays etc - basically anything you can set in an Endpoint or Connection definition. An
+	Endpoint or Connection can have zero or more types assigned; they are merged as granularly as possible, in the order
+	in which they were assigned.  There is a supporting API that works in the same way as the class stuff does in
+	jQuery - hasType, addType, removeType, toggleType, setType, and each of these methods (except hasType) takes a space-separated
+	string so you can add several at once.
 
     - added 'setEnabled' / 'isEnabled' methods to selectEndpoint return value
 	- added 'ConnectorZIndex' optional default. use this to get hovered connectors to appear on top of others.
+	- added 'setVisible'/'isVisible' to both jsPlumb.select and jsPlumb.selectEndpoint return value
+	- added 'repaint' to return value from jsPlumb.select and jsPlumb.selectEndpoint
+	
 	
 	ISSUES RESOLVED
 	
